prepravljen bekend i uradjen frontend za preporuku feeda